# mcp-mirror

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mirror_mcp/: __init__.py  config.py  mirror.py  server.py
